--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,92 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* App Css */
+@import "styles/fonts.css";
+@import "./styles/card.css";
+@import "./styles/buttons.css";
+@import "./styles/selected.css";
+@import "./styles/nav_menu.css";
+@import "./styles/transitions.css";
+
+
+/* Keyframes */
+@layer utilities {
+  @keyframes fade-in-up {
+    from {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes fade-in-down {
+    from {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes slide-in-up {
+    from {
+      transform: translateY(100%);
+    }
+
+    to {
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes slide-in-down {
+    from {
+      transform: translateY(-100%);
+    }
+
+    to {
+      transform: translateY(0);
+    }
+  }
+
+  @keyframes fade-out-up {
+    from {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    to {
+      opacity: 1;
+      transform: translateY(-20px);
+    }
+  }
+
+
+  /* Utilities */
+  .fade-in-up {
+    animation: fade-in-up 0.6s ease-out both;
+  }
+
+  .fade-in-down {
+    animation: fade-in-down 0.9s ease-out both;
+  }
+
+  .slide-in-up {
+    animation: slide-in-up 0.5s ease-in-out both;
+  }
+
+  .slide-in-down {
+    animation: slide-in-down 0.9s ease-in-out both;
+  }
+  .fade-out-up {
+    animation: fade-out-up 0.6s ease-out both;
+  }
 }
